<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/regHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="124dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="123dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/reg_header"
                    android:textColor="#F44336"
                    android:textColorHighlight="#EDE9E9"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/forenameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="160dp"
                    android:layout_marginEnd="17dp"
                    android:text="@string/forename_txt"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/forenameField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/forenameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/forenameTxt"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/surnameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="68dp"
                    android:layout_marginEnd="23dp"
                    android:text="@string/surname_txt"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/surnameField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forenameTxt" />

                <EditText
                    android:id="@+id/surnameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/surnameTxt"
                    app:layout_constraintTop_toBottomOf="@+id/forenameField" />

                <TextView
                    android:id="@+id/emailTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="51dp"
                    android:layout_marginTop="67dp"
                    android:layout_marginEnd="41dp"
                    android:text="@string/email_txt"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/emailField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surnameTxt" />

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="50dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/emailTxt"
                    app:layout_constraintTop_toBottomOf="@+id/surnameField" />

                <TextView
                    android:id="@+id/passwordTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="68dp"
                    android:layout_marginEnd="17dp"
                    android:text="@string/password_txt"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/passworldField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

                <EditText
                    android:id="@+id/passworldField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="49dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/passwordTxt"
                    app:layout_constraintTop_toBottomOf="@+id/emailField" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="384dp"
                    android:layout_height="147dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="79dp"
                    android:layout_marginEnd="13dp"
                    android:background="#F12E70"
                    android:padding="5dp"
                    android:textColor="#F4EEEE"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passworldField" />

                <Button
                    android:id="@+id/regBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="154dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="152dp"
                    android:backgroundTint="#F44336"
                    android:onClick="register"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passworldField" />

                <Button
                    android:id="@+id/bkBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="225dp"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#F44336"
                    android:onClick="back"
                    android:text="@string/back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/passworldField" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>